# klever

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.devcontainer/: Dockerfile  README.md  devcontainer.json
.memory/: AGENTS.md  CLAUDE.md  PLAN.md  REVIEW-001.md  TASK-001-baseline-quality-gates.md  TASK-002-cocotb-smoke-harness.md  TASK-003-acceptance-test-matrix.md  TASK-009-iterator-eventually-semantics.md  TODO.md
.memory/issues/: AGENTS.md  CLAUDE.md
.memory/issues/001-add-channels/: CONTEXT.md  PLAN.md  REVIEW-01.md  REVIEW-03.md  REVIEW-04.md  REVIEW-05.md  REVIEW-06.md  TASK-001-baseline-quality-gates.md  TASK-002-cocotb-smoke-harness.md  TASK-004-lifecycle-error-tests.md  TASK-005-rendezvous-handshake-fix.md  TASK-006-queue-disconnect-safety.md  TASK-007-broadcast-disconnect-safety.md  TASK-008-copy-on-send-semantics.md  TASK-01-baseline-quality-gates.md  TASK-010-channel-documentation.md  TASK-011-ci-tooling-alignment.md  TASK-02-cocotb-smoke-harness.md  TASK-03-acceptance-test-matrix.md  TASK-04-foundation-create-and-test-scaffold.md  TASK-04-lifecycle-error-tests.md  TASK-05-endpoints-lifecycle-and-constraints.md  TASK-05-rendezvous-handshake-fix.md  TASK-06-queue-disconnect-safety.md  TASK-06-queue-mode-semantics.md  TASK-07-broadcast-disconnect-safety.md  TASK-07-broadcast-mode-semantics.md  TASK-08-copy-on-send-semantics.md  TASK-08-rendezvous-mode-semantics.md  TASK-09-error-and-wait-contracts.md  TASK-09-iterator-eventually-semantics.md  TASK-10-channel-documentation.md  TASK-10-iterator-eventually-and-cancellation.md  TASK-11-ci-tooling-alignment.md  TASK-11-copy-on-send-and-copy-strategy.md  TASK-12-concurrency-and-resource-cleanup.md  TASK-13-channel-documentation.md  TASK-14-ci-tooling-alignment.md
.memory/issues/ISSUE-1-add-channels/: CONTEXT.md  PLAN.md  TASK-101-baseline-quality-gates.md  TASK-102-cocotb-smoke-harness.md  TASK-103-acceptance-test-matrix.md  TASK-104-foundation-create-and-test-scaffold.md  TASK-105-endpoints-lifecycle-and-constraints.md  TASK-106-queue-mode-semantics.md  TASK-107-broadcast-mode-semantics.md  TASK-108-rendezvous-mode-semantics.md  TASK-109-error-and-wait-contracts.md  TASK-110-iterator-eventually-and-cancellation.md  TASK-111-copy-on-send-and-copy-strategy.md  TASK-112-concurrency-and-resource-cleanup.md  TASK-113-channel-documentation.md  TASK-114-ci-tooling-alignment.md
.memory/issues/templates/: AGENTS.md  PLAN.md  TASK.md
.memory/issues/tools/: AGENTS.md  reviewctl.py  test_reviewctl.py
.memory/templates/: AGENTS.md  PLAN.md  REVIEW.md  TASK.md
.opencode/command/: commit.md
.opencode/skill/do-issue-review/: SKILL.md  poll.sh
.opencode/skill/get-issue-review/: SKILL.md  poll.sh
.opencode/skill/issue-workflow/: SKILL.md  poll_review.sh
.opencode/skill/issues-review-control/: SKILL.md
.opencode/skill/issues-review-control/scripts/: __init__.py  reviewctl.py  test_reviewctl.py
.opencode/skill/issues-reviewee/: SKILL.md
.opencode/skill/issues-reviewer/: SKILL.md
.opencode/skill/issues-workflow/: SKILL.md
.opencode/skill/mart-cli/: SKILL.md
.opencode/skill/mart-cli/scripts/: AGENTS.md  mart.py  test_mart.py
.opencode/skill/mart-reviewee/: SKILL.md
.opencode/skill/mart-reviewer/: SKILL.md
src/klever/: __init__.py  api.py  channel.py  types.py
tests/: __init__.py  conftest.py  test.py  test_channels.py
tests/hdl/: README.md  dummy_top.sv
tools/review/: __init__.py  review.py  test_review.py
