[project]
name = "klever"
version = "0.1.0a1"
description = "Kit for Less-Effort Verification"
readme = "README.md"
authors = [{ name = "esynr3z", email = "esynr3z@gmail.com" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.12,<3.15"
keywords = [
    "verification",
    "UVM",
    "SystemVerilog",
    "cocotb",
    "HDL",
    "RTL",
    "FPGA",
    "ASIC",
    "EDA",
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
dependencies = [
    "cocotb>=2.0.1",
]

[project.urls]
Organization = "https://github.com/klever-verif"
Repository = "https://github.com/klever-verif/klever.git"

[project.scripts]
klever = "klever:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "commitizen>=4.10.0",
    "pre-commit>=4.4.0",
    "pre-commit-hooks>=6.0.0",
    "pyright>=1.1.407",
    "pytest>=9.0.0",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.4",
]

[tool.ruff]
line-length = 120
exclude = [
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]
include = ["*.py", "**/*.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", # incompatible with D211
    "D213", # incompatible with D212
    # Offical guide recommends disable these to avoid conflicts with formatter
    "W191",    # tab-indentation
    "E111",    # indentation-with-invalid-multiple
    "E114",    # indentation-with-invalid-multiple-comment
    "E117",    # over-indented
    "D206",    # indent-with-spaces
    "D300",    # triple-single-quotes
    "Q000",    # bad-quotes-inline-string
    "Q001",    # bad-quotes-multiline-string
    "Q002",    # bad-quotes-docstring
    "Q003",    # avoidable-escaped-quote
    "COM812",  # missing-trailing-comma
    "COM819",  # prohibited-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
    "ISC002",  # multi-line-implicit-string-concatenation
    "TD001",   # invalid-todo-tag
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "FIX",     # flake8-fixme
    "EM101",   # raw-string-in-exception
    "EM102",   # f-string-in-exception
    "FBT",     # flake8-boolean-trap
    "TRY003",  # raise-vanilla-args
    "TRY400",  # error-instead-of-exception
    "E741",    # ambiguous-variable-name
    "ANN401",  # any-type
    "S607",    # start-process-with-partial-path
    "S603",    # subprocess-without-shell-equals-true
    "PERF203", # try-except-in-loop
    "TRY301",  # raise-within-try
]

[tool.ruff.lint.per-file-ignores]
# Ignore all directories named `tests`.
"tests/**" = [
    "S101",    # assert
    "PLR2004", # magic-value-comparison
    "E712",    # true-false-comparison
    "SLF001",  # private-member-access
]

[tool.ruff.lint.isort]
required-imports = ["from __future__ import annotations"]

[tool.ruff.format]
docstring-code-format = true

[tool.pyright]
exclude = [
    "**/__pycache__",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "build",
    "dist",
]
